--- a/app/src/main/res/layout/fragment_tomorrows.xml
+++ b/app/src/main/res/layout/fragment_tomorrows.xml
@@ -14,14 +14,21 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/resort_condition_json"
+            android:id="@+id/tomorrow_resort_condition_json"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="resort condition json"
             android:textSize="20sp"
             android:textColor="@color/white"
             android:textAlignment="center"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
+
+        <View
+            android:id="@+id/tomorrow_top_divider"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="?android:attr/listDivider" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -30,7 +37,7 @@
             >
 
             <TextView
-                android:id="@+id/runs_percentage_json"
+                android:id="@+id/tomorrow_runs_percentage_json"
                 android:layout_width="70sp"
                 android:layout_height="70sp"
                 android:text="runs open json"
@@ -64,7 +71,7 @@
                 />
 
             <TextView
-                android:id="@+id/new_snow_json"
+                android:id="@+id/tomorrow_new_snow_json"
                 android:layout_width="70sp"
                 android:layout_height="70sp"
                 android:text="new snow json"
@@ -118,7 +125,7 @@
                 />
 
             <TextView
-                android:id="@+id/last_snow_json"
+                android:id="@+id/tomorrow_last_snow_json"
                 android:layout_width="70sp"
                 android:layout_height="70sp"
                 android:text="last snow json"
@@ -187,6 +194,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             />
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -462,7 +471,7 @@
                     />
 
                 <TextView
-                    android:id="@+id/top_snow_depth_json"
+                    android:id="@+id/tomorrows_top_snow_depth_json"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
