--- a/app/src/main/res/layout/activity_chats.xml
+++ b/app/src/main/res/layout/activity_chats.xml
@@ -30,6 +30,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
+        android:weightSum="2"
         >
 
         <EditText
@@ -37,6 +38,7 @@
             android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
+            android:layout_weight="1"
             android:hint="type message...."
             android:padding="12dp" />
 
@@ -44,6 +46,7 @@
             android:id="@+id/send_private_message_button"
             android:layout_width="45dp"
             android:layout_height="45dp"
+            android:layout_weight="1"
             android:elevation="10dp"
             app:srcCompat="@drawable/ic_send_black_24dp" />
 
