--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -71,7 +71,7 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:background="@color/fui_buttonShadow"
+        android:background="@color/browser_actions_bg_grey"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginTop="10dp"
