--- a/app/src/main/res/layout/activity_sign__up.xml
+++ b/app/src/main/res/layout/activity_sign__up.xml
@@ -5,31 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SnowChat.Sign_UpActivity"
-    android:background="@drawable/bg_gradient">
-
-    <include
-        android:id="@+id/chat_toolbar"
-        layout="@layout/app_bar_layout">
-
-    </include>
+    android:background="@drawable/sports_background">
 
 
     <ImageView
         android:id="@+id/loginImage"
-        android:layout_width="267dp"
-        android:layout_height="168dp"
+        android:layout_width="match_parent"
+        android:layout_height="266dp"
         android:src="@drawable/chatting"
-        app:layout_constraintTop_toBottomOf="@+id/chat_toolbar"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="0dp"
         tools:layout_editor_absoluteY="54dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="376dp"
-
         android:layout_height="409dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,29 +47,42 @@
             android:hint="Password"
             android:inputType="textPassword" />
 
-        <Button
+        <android.widget.Button
             android:id="@+id/create_acc_btn"
-            android:layout_width="match_parent"
-            android:layout_height="63dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:backgroundTint="@color/white"
+            android:layout_width="250dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="10dp"
             android:text="Create Account"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textSize="25sp"
+            android:textColor="#fff"
+            android:background="@drawable/gradient_button"
+            android:clickable="true"
+            android:focusable="true"
+            />
 
-        <Button
+        <android.widget.Button
             android:id="@+id/sign_in_btn"
-            android:layout_width="match_parent"
-            android:layout_height="63dp"
-            android:layout_marginBottom="8dp"
-            android:backgroundTint="@color/white"
-            android:text="Already have an account?"
-            android:textSize="20sp"
-            android:textStyle="bold"
-             />
-
-
+            android:layout_width="250dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="10dp"
+            android:text="Sign In"
+            android:textSize="25sp"
+            android:textColor="#fff"
+            android:background="@drawable/gradient_button"
+            android:clickable="true"
+            android:focusable="true"
+            />
     </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/signUp_bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="?android:windowBackground"
+        app:menu="@menu/signin_bottom_nav_menu"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
