--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,121 +4,108 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_gradient"
+    android:background="@drawable/sports_background"
     tools:context=".SnowChat.SignInActivity">
 
-    <include
-        android:id="@+id/chat_toolbar"
-        layout="@layout/app_bar_layout">
-    </include>
 
-    <pl.droidsonroids.gif.GifImageView
+
+    <ImageView
         android:id="@+id/loginImage"
-        android:layout_width="360dp"
-        android:layout_height="218dp"
+        android:layout_width="match_parent"
+        android:layout_height="266dp"
+        android:layout_marginTop="0dp"
         android:src="@drawable/chatting"
-        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.272"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chat_toolbar" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="Snow Chat Image" />
 
     <LinearLayout
-        android:layout_width="386dp"
-        android:layout_height="350dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginImage"
-        app:layout_constraintVertical_bias="0.585"
-        android:layout_marginTop="15dp"
-        android:orientation="vertical">
-
-
+        app:layout_constraintTop_toBottomOf="@+id/loginImage">
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            />
+            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:hint="Password"
             android:inputType="textPassword"
-            />
+            android:minHeight="48dp" />
 
-        <Button
+
+        <android.widget.Button
             android:id="@+id/sign_in_btn"
-            android:layout_width="match_parent"
-            android:layout_height="63dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="5dp"
-            android:backgroundTint="@color/white"
+            android:layout_width="240dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="10dp"
             android:text="Sign In"
-            android:textSize="24dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/loginImage"
-            app:layout_constraintVertical_bias="0.138" />
-
-
-
-        <TextView
-            android:id="@+id/phone_sign_heading"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:layout_marginBottom="1dp"
-            android:text="Or Sign in using your"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="25sp"
+            android:textColor="#fff"
+            android:background="@drawable/gradient_button"
+            android:clickable="true"
+            android:focusable="true"
             />
 
-        <Button
-            android:id="@+id/phone_login_btn"
-            android:layout_width="match_parent"
-            android:layout_height="63dp"
-            android:backgroundTint="@color/white"
-            android:text="Phone"
-            android:textSize="24sp"
-            android:textStyle="bold"/>
-
-        <TextView
+      <!--  <TextView
             android:id="@+id/forget_password_link"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginRight="10dp"
             android:text="Forgot Password?"
             android:textAlignment="textEnd"
             android:textColor="@color/white"
-            android:textSize="18sp"
-            />
-
+            android:textSize="18sp" />
+-->
         <TextView
             android:id="@+id/new_acc_link"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginStart="140dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="5dp"
             android:clickable="true"
             android:text="Need New account?"
             android:textAlignment="textEnd"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:focusable="true" />
 
     </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/signIn_bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="?android:windowBackground"
+        app:menu="@menu/signin_bottom_nav_menu"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
 
 <!--    <ProgressBar-->
 <!--        android:id="@+id/progressBar"-->
@@ -134,4 +121,3 @@
 <!--        android:visibility="gone"/>-->
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
