--- a/app/src/main/res/layout/fragment_todays.xml
+++ b/app/src/main/res/layout/fragment_todays.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_gradient"
+    android:background="@drawable/sports_background"
     tools:context=".SnowReport.TodaysFragment"
     android:orientation="vertical">
 
@@ -26,7 +25,7 @@
             android:layout_marginBottom="10dp"/>
 
             <View
-                android:id="@+id/tomorrow_top_divider"
+                android:id="@+id/today_top_divider"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:background="?android:attr/listDivider" />
@@ -36,7 +35,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="2"
-            >
+            android:baselineAligned="false">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -49,7 +48,7 @@
                     android:id="@+id/runs_percentage_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="runs open"
+                    android:text="Runs Open"
                     android:textStyle="bold"
                     android:layout_marginTop="5dp"
                     android:textSize="20sp"
@@ -80,7 +79,7 @@
                     android:id="@+id/new_snow_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="new snow"
+                    android:text="New Snow"
                     android:textStyle="bold"
                     android:layout_marginTop="5dp"
                     android:textSize="20sp"
@@ -105,6 +104,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:baselineAligned="false"
             android:weightSum="2"
             >
 
@@ -119,7 +119,7 @@
                     android:id="@+id/snow_falling_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="snow falling"
+                    android:text="Snow Falling"
                     android:textStyle="bold"
                     android:layout_marginTop="5dp"
                     android:textSize="20sp"
@@ -151,7 +151,7 @@
                     android:id="@+id/rain_falling_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="rain falling"
+                    android:text="Rain Falling"
                     android:textStyle="bold"
                     android:layout_marginTop="5dp"
                     android:textSize="20sp"
@@ -176,6 +176,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:baselineAligned="false"
             android:weightSum="2"
             >
 
@@ -190,7 +191,7 @@
                     android:id="@+id/visibility_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="visibility"
+                    android:text="Visibility"
                     android:textStyle="bold"
                     android:layout_marginTop="5dp"
                     android:textSize="20sp"
@@ -206,9 +207,6 @@
                     android:textColor="@color/white"
                     android:textAlignment="center"
                     />
-
-
-
             </LinearLayout>
 
             <LinearLayout
@@ -222,7 +220,7 @@
                     android:id="@+id/freeze_lvl_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="freeze level"
+                    android:text="Freeze Level"
                     android:textStyle="bold"
                     android:layout_marginTop="5dp"
                     android:textSize="20sp"
@@ -238,77 +236,7 @@
                     android:textColor="@color/white"
                     android:textAlignment="center"
                     />
-
             </LinearLayout>
-
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="fill_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:weightSum="2"-->
-<!--            >-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:orientation="vertical"-->
-<!--                android:gravity="center">-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/visibility_text"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="visibility"-->
-<!--                    android:textSize="20sp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/visibility_json"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="visibility json"-->
-<!--                    android:textSize="25sp"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:textAlignment="center"-->
-<!--                    />-->
-<!--                -->
-<!--            </LinearLayout>-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:orientation="vertical"-->
-<!--                android:gravity="center">-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/freeze_lvl_text"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="freeze level"-->
-<!--                    android:textAlignment="center"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:textSize="20sp"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/freeze_lvl_json"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="freeze lvl json"-->
-<!--                    android:textSize="25sp"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:textAlignment="center"-->
-<!--                    />-->
-
-<!--            </LinearLayout>-->
-
-
         </LinearLayout>
 
             <LinearLayout
@@ -340,12 +268,13 @@
                     android:layout_marginTop="5dp"
                     android:text="last snow json"
                     android:textColor="@color/white"
-                    android:textSize="25dp"
+                    android:textSize="25sp"
                     />
 
             </LinearLayout>
+
             <View
-                android:id="@+id/tomorrow_mid_divider"
+                android:id="@+id/top_of_access_divider"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:background="?android:attr/listDivider" />
@@ -417,7 +346,8 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:src="@drawable/blizzard"
-                    android:paddingLeft="20dp"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="0dp"
                     />
 
                 <LinearLayout
@@ -625,6 +555,12 @@
 
         </LinearLayout>
 
+        <View
+            android:id="@+id/bottom_of_access_divider"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="?android:attr/listDivider" />
+
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
@@ -632,18 +568,21 @@
                 android:layout_marginTop="10dp"
                 >
 
-                <com.google.android.gms.ads.AdView
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                <com.google.android.gms.ads.AdView xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/adview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    app:adSize="BANNER"
-                    app:adUnitId="ca-app-pub-3940256099942544/6300978111">
-
-                </com.google.android.gms.ads.AdView>
+                    app:adSize="LARGE_BANNER"
+                    app:adUnitId="ca-app-pub-3940256099942544/6300978111" />
 
             </RelativeLayout>
+
+        <View
+            android:id="@+id/above_top_divider"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="?android:attr/listDivider" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -657,7 +596,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="Top @3600ft/1097m"
+                android:text="Summit @3600ft/1097m"
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 android:textStyle="bold"
@@ -711,7 +650,8 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:src="@drawable/blizzard"
-                    android:paddingLeft="20dp"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="0dp"
                     />
 
                 <LinearLayout
@@ -731,21 +671,25 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:layout_marginStart="5dp"
                             android:text="Fresh Snow:"
-                            android:textColor="@color/white"
                             android:textAlignment="center"
-                            android:textSize="16sp"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:textSize="19sp"
                             />
 
                         <TextView
                             android:id="@+id/temp_top_heading"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="50dp"
                             android:layout_weight="1"
+                            android:layout_marginStart="10dp"
                             android:text="Temperature:"
                             android:textColor="@color/white"
                             android:textAlignment="center"
-                            android:textSize="16sp"
+                            android:textSize="19sp"
+                            android:textStyle="bold"
                             />
 
                     </LinearLayout>
@@ -793,8 +737,9 @@
                             android:layout_weight="1"
                             android:text="Feels Like:"
                             android:textColor="@color/white"
+                            android:textSize="19sp"
                             android:textAlignment="center"
-                            android:textSize="18sp"
+                            android:textStyle="bold"
                             />
 
                         <TextView
@@ -804,8 +749,9 @@
                             android:layout_weight="1"
                             android:text="Wind Direction:"
                             android:textColor="@color/white"
+                            android:textSize="19sp"
                             android:textAlignment="center"
-                            android:textSize="18sp"
+                            android:textStyle="bold"
                             />
 
                     </LinearLayout>
@@ -851,10 +797,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:textAlignment="center"
                             android:text="Wind Speed:"
                             android:textColor="@color/white"
-                            android:textSize="18sp"
+                            android:textSize="19sp"
+                            android:textAlignment="center"
+                            android:textStyle="bold"
                             />
 
                         <TextView
@@ -863,9 +810,10 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="Wind Gust:"
-                            android:textAlignment="center"
                             android:textColor="@color/white"
-                            android:textSize="18sp"
+                            android:textSize="19sp"
+                            android:textAlignment="center"
+                            android:textStyle="bold"
                             />
 
                     </LinearLayout>
@@ -906,6 +854,40 @@
 
         </LinearLayout>
 
+        <View
+            android:id="@+id/below_top_divider"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="?android:attr/listDivider" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            >
+
+            <com.google.android.gms.ads.AdView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/ad_below_top_report"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                app:adSize="LARGE_BANNER"
+                app:adUnitId="ca-app-pub-3940256099942544/6300978111" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/below_top_ad_divider"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="?android:attr/listDivider" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Weather JSON provided by "
+            />
     </LinearLayout>
 
 </ScrollView>
